--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Guess My Number!</h1>
     <p class="between">(Between 1 and 20)</p>
     <button class="btn again" onclick="again()">Again!</button>
-    <div class="number" id="quote">?</div>
+    <div class="number" id="secret">?</div>
   </header>
   <main>
     <section class="left">
